# first-repository-for-base-commit-

./: .gitignore  Cargo.toml  README.md
skills/rpow2-authorized-miner/: SKILL.md
skills/rpow2-authorized-miner/agents/: openai.yaml
src/: pow.rs
